added about and  seminar

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title> HOME </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="index.css">
@@ -12,8 +12,8 @@
     <body>
         <div class="topnav">
             <a class="active" href="#home">Home</a>
-            <a href="#news">Seminarie</a>
-            <a href="#about">About</a>
+            <a href="seminarie.html">Seminarie</a>
+            <a href="about.html">About</a>
         </div>
         <div class="content">
             <h1>Welcome</h1>
