--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
               <input type="text">
               <button type="submit">Logga in</button> 
           </form>
-          <p>Register? <a>Click here!</a>
+          <p>Register? <a href="registration.html">Click here!</a>
           </p>
       </div>
         
