--- a/about.html
+++ b/about.html
@@ -1,23 +1,33 @@
 <html <!DOCTYPE html>
- <html class="no-js">
+  <html class="no-js">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title> ABOUT</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="index.css">
+      <meta charset="utf-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <title>ABOUT</title>
+      <meta name="description" content="" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <link rel="stylesheet" href="index.css" />
     </head>
     <body>
-        <div class="topnav">
-            <a href="index.html">Home</a>
-            <a href="seminarie.html">Seminare </a>
-            <a class="active" href="about.html">About </a>
+      <div class="topnav">
+        <div class="topnav__left">
+          <a href="index.html">Home</a>
+          <a href="seminarie.html">Seminarie</a>
+          <a class="active" href="about.html">About</a>
         </div>
-        <div class="about">
-            <h1>About</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat suscipit et fugit perferendis delectus esse id earum tempore. Corporis veniam maxime harum eius sit nostrum ducimus cupiditate totam blanditiis? Eos?</p>
+        <div class="topnav__right">
+          <a href="login.html">Login</a>
         </div>
-        
+      </div>
+      <div class="about">
+        <h1>About</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+          suscipit et fugit perferendis delectus esse id earum tempore. Corporis
+          veniam maxime harum eius sit nostrum ducimus cupiditate totam
+          blanditiis? Eos?
+        </p>
+      </div>
     </body>
+  </html>
 </html>
