--- a/index.html
+++ b/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title> HOME </title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <div class="topnav">
-            <a class="active" href="#home">Home</a>
-            <a href="seminarie.html">Seminarie</a>
-            <a href="about.html">About</a>
-        </div>
-        <div class="content">
-            <h1>Welcome</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, necessitatibus illum voluptatibus obcaecati repellendus doloremque? Dignissimos tenetur labore sunt tempore ab, natus eum nostrum cum libero, perspiciatis maxime architecto reiciendis?</p>
-
-        </div>
-     
-       
-    </body>
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+  <!--<![endif]-->
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>HOME</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <div class="topnav">
+      <div class="topnav__left">
+        <a class="active" href="#home">Home</a>
+        <a href="seminarie.html">Seminarie</a>
+        <a href="about.html">About</a>
+      </div>
+      <div class="topnav__right">
+        <a href="login.html">Login</a>
+      </div>
+    </div>
+    <div class="content">
+      <h1>Welcome</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+        necessitatibus illum voluptatibus obcaecati repellendus doloremque?
+        Dignissimos tenetur labore sunt tempore ab, natus eum nostrum cum
+        libero, perspiciatis maxime architecto reiciendis?
+      </p>
+    </div>
+  </body>
 </html>
