--- a/login.html
+++ b/login.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
- <html class="no-js"> 
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>LOGIN</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-      <div class="login">
-          <h1>LOGGA IN</h1>
-          <form onsubmit="">
-              <label for="username">
-                  Username
-              </label>
-              <input type="text">
-              <label for="password">
-                  Password
-              </label>
-              <input type="text">
-              <button type="submit">Logga in</button> 
-          </form>
-          <p>Register? <a href="registration.html">Click here!</a>
-          </p>
+<html class="no-js">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>LOGIN</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <div class="topnav">
+      <div class="topnav__left">
+        <a href="index.html">Home</a>
+        <a href="seminarie.html">Seminarie</a>
+        <a href="about.html">About</a>
       </div>
-        
-        
-    </body>
+      <div class="topnav__right">
+        <a class="active" href="login.html">Login</a>
+      </div>
+    </div>
+    <div class="login">
+      <h1>LOGGA IN</h1>
+      <form onsubmit="">
+        <label for="username"> Username </label>
+        <input type="text" />
+        <label for="password"> Password </label>
+        <input type="text" />
+        <button type="submit">Logga in</button>
+      </form>
+      <p>Register? <a href="registration.html">Click here!</a></p>
+    </div>
+  </body>
 </html>
