--- a/registration.html
+++ b/registration.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
- <html class="no-js"> 
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>REGISTRATION</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-      <div class="registration">
-          <h1>Registration</h1>
-          <form onsubmit="">
-              <label for="E-mail">
-                  Enter email
-              </label>
-              <input type="email">
-              <label for="password">
-                  Enter Password
-              </label>
-              <input type="password">
-              <label for="password">
-                 Confirm Password
-            </label>
-            <input type="password">
-              <label for="Name">
-                Enter full name
-            </label>
-            <input type=text>
-
-              <button type="submit">Register</button> 
-              
-          </form>
-          <p>Already registred? <a href="login.html">Login here!</a> </p>
+<html class="no-js">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>REGISTRATION</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <div class="topnav">
+      <div class="topnav__left">
+        <a class="active" href="#home">Home</a>
+        <a href="seminarie.html">Seminarie</a>
+        <a href="about.html">About</a>
       </div>
-        
-    </body>
+      <div class="topnav__right">
+        <a href="login.html">Login</a>
+      </div>
+    </div>
+    <div class="registration">
+      <h1>Registration</h1>
+      <form onsubmit="">
+        <label for="E-mail"> Enter email </label>
+        <input type="email" />
+        <label for="password"> Enter Password </label>
+        <input type="password" />
+        <label for="password"> Confirm Password </label>
+        <input type="password" />
+        <label for="Name"> Enter full name </label>
+        <input type="text" />
+
+        <button type="submit">Register</button>
+      </form>
+      <p>Already registred? <a href="login.html">Login here!</a></p>
+    </div>
+  </body>
 </html>
