--- a/seminarie.html
+++ b/seminarie.html
@@ -1,39 +1,44 @@
 <!DOCTYPE html>
- <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title> SEMINARIE </title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <div class="topnav">
-            <a href="index.html">Home</a>
-            <a class="active" href="seminarie.html">Seminare </a>
-            <a href="about.html">About</a>
-        </div>
-        <div class="seminarie">
-            <h1> Seminarie </h1>
-            <ul>
-                <li>
-                   <a href="seminarieInfo.html"> Seminarie 1 </a> 
-                </li>
-                <li>
-                    <a href="seminarieInfo.html"> Seminarie 2 </a>  
-                </li>
-                <li>
-                    <a href="seminarieInfo.html"> Seminarie 3 </a> 
-                </li>
-                <li>
-                    <a href="seminarieInfo.html"> Seminarie 4 </a> 
-                </li>
-                <li>
-                    <a href="seminarieInfo.html"> Seminarie 5 </a> 
-                </li>
-            </ul>
-        </div>
-        
-    </body>
+<html class="no-js">
+  <!--<![endif]-->
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>SEMINARIE</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <div class="topnav">
+      <div class="topnav__left">
+        <a href="index.html">Home</a>
+        <a class="active" href="seminarie.html">Seminarie</a>
+        <a href="about.html">About</a>
+      </div>
+      <div class="topnav__right">
+        <a href="login.html">Login</a>
+      </div>
+    </div>
+    <div class="seminarie">
+      <h1>Seminarie</h1>
+      <ul>
+        <li>
+          <a href="seminarieInfo.html"> Seminarie 1 </a>
+        </li>
+        <li>
+          <a href="seminarieInfo.html"> Seminarie 2 </a>
+        </li>
+        <li>
+          <a href="seminarieInfo.html"> Seminarie 3 </a>
+        </li>
+        <li>
+          <a href="seminarieInfo.html"> Seminarie 4 </a>
+        </li>
+        <li>
+          <a href="seminarieInfo.html"> Seminarie 5 </a>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
