--- a/seminarieInfo.html
+++ b/seminarieInfo.html
@@ -1,24 +1,32 @@
 <html <!DOCTYPE html>
- <html class="no-js"> 
+  <html class="no-js">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title> seminarieInfo</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="index.css">
+      <meta charset="utf-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <title>seminarieInfo</title>
+      <meta name="description" content="" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <link rel="stylesheet" href="index.css" />
     </head>
     <body>
-        <div class="seminarieInfo">
-        <h1> Seminarie </h1>
-        <h3> Plats: Långedragsvägen 116</h3>
-        <h3> Tid: 16:00-20:00</h3>
-        <h3> Lärare: Jan-Åke</h3>
-        <button > Anmäl  </button>
-        <button > <a href="seminarie.html">Tillbaka</a>  </button>
-        
-
+      <div class="topnav">
+        <div class="topnav__left">
+          <a class="active" href="#home">Home</a>
+          <a href="seminarie.html">Seminarie</a>
+          <a href="about.html">About</a>
         </div>
-       
+        <div class="topnav__right">
+          <a href="login.html">Login</a>
+        </div>
+      </div>
+      <div class="seminarieInfo">
+        <h1>Seminarie</h1>
+        <h3>Plats: Långedragsvägen 116</h3>
+        <h3>Tid: 16:00-20:00</h3>
+        <h3>Lärare: Jan-Åke</h3>
+        <button>Anmäl</button>
+        <button><a href="seminarie.html">Tillbaka</a></button>
+      </div>
     </body>
+  </html>
 </html>
