--- a/registration.html
+++ b/registration.html
@@ -11,12 +11,12 @@
   <body>
     <div class="topnav">
       <div class="topnav__left">
-        <a class="active" href="#home">Home</a>
+        <a href="#home">Home</a>
         <a href="seminarie.html">Seminarie</a>
         <a href="about.html">About</a>
       </div>
       <div class="topnav__right">
-        <a href="login.html">Login</a>
+        <a class="active" href="login.html">Login</a>
       </div>
     </div>
     <div class="registration">
